# SwiftBackend

./: .gitignore  Cargo.toml  readme.md
SwiftDetLibRs/: Cargo.toml
SwiftDetLibRs/src/: lib.rs
src/: config.rs  errors.rs  main.rs  session.rs
src/apis/: data.rs  detector.rs  groups.rs  mod.rs  positions.rs  projects.rs  records.rs  storage.rs  system.rs  users.rs
src/forms/: groups.rs  mod.rs  positions.rs  projects.rs  records.rs  users.rs
src/models/: detections.rs  drafts.rs  groups.rs  inactive_users.rs  invitations.rs  mod.rs  positions.rs  projects.rs  records.rs  storage.rs  users.rs
