[package]
name = "swift_backend"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
badlog = "1.1.1"
toml = "0.5.8"
rand = "0.8.5"
wither = { version = "0.9.0", features = ["async-std-runtime"], default-features = false }
chrono = "0.4.9"
async-trait = "0.1.52"
swift_det_lib = { path = "./SwiftDetLibRs" }
image = "0.24.1"
serde_json = "1.0.79"
regex = "1.5.5"
lettre = "0.9.6"
lettre_email = "0.9.4"
md5 = "0.7.0"
futures = "0.3.21"
multer = "2.0.2"
bson = "2.1.0"
urlencoding = "2.1.0"


[profile.release]
# 一些优化内容
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.package]
adler32.opt-level = 3
crc32fast.opt-level = 3
miniz_oxide.opt-level = 3
png.opt-level = 3
deflate.opt-level = 3

[profile.dev.package]
adler32.opt-level = 3
crc32fast.opt-level = 3
miniz_oxide.opt-level = 3
png.opt-level = 3
deflate.opt-level = 3